--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} {{actor.type}} flexcol" autocomplete="off">
+<form class="{{actor.type}} {{cssClass}} flexcol eventide-character-sheet" autocomplete="off">
 
   {{!-- Sheet Header --}}
   <header class="sheet-header">
@@ -56,9 +56,9 @@
 
     {{!-- Owned Features Tab --}}
     <div class="tab features" data-group="primary" data-tab="features">
-      <section class="grid grid-3col">
+      <section class="grid grid-5col">
         <aside class="sidebar">
-          <div class="abilities grid-2col">
+          <div class="abilities flexcol">
 
             {{#each system.abilities as |ability key|}}
             <section class="eventide-ability-{{key}}-box eventide-ability-row">
@@ -73,15 +73,15 @@
             <div class="ability gridrow">
               <div class="ability-stats flex-group-center">
                 <div class="ability-total rollable" data-type="{{key}}" data-roll="d@hiddenAbilities.dice.total+@abilities.{{key}}.total" data-label="{{localize (lookup @root.config.abilities key)}}">
-                  {{numberFormat ability.total decimals=0 sign=true}}
+                  Total: {{numberFormat ability.total decimals=0 sign=true}}
                 </div>
-                {{#if ability.override}}
                 <div class="ability-override flex-group-center">
-                  <i class="fa-solid fa-road-barrier" style="color: red"></i>
-                </div>
+                {{#if ability.override}}
+                  <i class="fas fa-lock" style="color: red"></i> <span style="color: white"> Capped</span>
                 {{else}}
-                <div class="ability-override flex-group-center"><i class="fa-solid fa-road" style="color: green"></i></div>
+                <i class="fas fa-unlock-alt" style="color: #4CAF50"></i><span style="color: white"> Uncapped</span>
                 {{/if}}
+                </div>
               </div>
             </div>
             </section>
@@ -90,7 +90,7 @@
         </aside>
 
         {{!-- For the main features list, span the right two columns --}}
-        <section class="main grid-span-2">
+        <section class="main grid-span-4">
           {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in module/helpers/templates.mjs --}}
           {{> "systems/eventide-rp-system/templates/actor/parts/actor-features.hbs"}}
         </section>
