--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -1,5 +1,6 @@
 @use "../utils/typography";
 @use "../utils/colors"as colors;
+@use "../global/character-sheet";
 
 .window-app {
   font-family: typography.$font-primary;
@@ -13,6 +14,11 @@
 .window-content {
   background: colors.$character-background-color;
   padding: 0px;
+}
+
+.window-content form,
+.window-content .dialog-buttons {
+  @extend .eventide-character-sheet;
 }
 
 .rollable {
