--- a/src/scss/global/_character-sheet.scss
+++ b/src/scss/global/_character-sheet.scss
@@ -13,6 +13,9 @@
   background-image: colors.$character-background-color;
   padding: 5px;
   margin: -8px;
+  background-attachment: local;
+  height: 100%;
+  overflow: auto;
 }
 
 .eventide-character-sheet input {
