Began the process of converting to ApplicationV2 for customized documents. Will have to do this with actors and items eventually.

--- a/templates/macros/damage.hbs
+++ b/templates/macros/damage.hbs
@@ -1,4 +1,4 @@
-<form class="{{cssClass}}" autocomplete="off">
+<div class="{{cssClass}} standard-form" autocomplete="off">
   <section class="sheet-body">
     <p>This script is for creating a custom damage message and applying the damage to your targeted token.</p>
     <div class="form-group">
@@ -14,4 +14,4 @@
       <input name="formula" value="{{lookup storedData (lookup storageKeys 2)}}">
     </div>
   </section>
-</form>
+</div>
