--- a/templates/macros/restore.hbs
+++ b/templates/macros/restore.hbs
@@ -1,4 +1,4 @@
-<form autocomplete="off" name="form">
+<div class="{{cssClass}} standard-form" autocomplete="off">
   <hr />
   <div class="form-group">
     <label><strong>Restore Resolve:</strong></label>
@@ -22,4 +22,4 @@
       <input type="checkbox" name="{{status.id}}" id="{{status.id}}">
     </div>
   {{/each}}
-</form>
+</div>
