--- a/templates/macros/status-creator.hbs
+++ b/templates/macros/status-creator.hbs
@@ -1,4 +1,4 @@
-<form>
+<div class="{{cssClass}} standard-form" autocomplete="off">
   <div class="form-group">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" placeholder="Name">
@@ -9,8 +9,8 @@
   </div>
   <div class="form-group">
     <label for="img">Image:</label>
-    <button type="button" id="file-picker" data-type="image" data-target="img" class="file-picker">Browse</button>
-    <img id="image-preview" src="icons/svg/item-bag.svg" style="max-width: 100px; max-height: 100px; display: block; margin-top: 10px;" alt="Image Preview">
+    {{!-- <button type="button" id="file-picker" data-type="image" data-target="img" class="file-picker">Browse</button> --}}
+    <file-picker data-action="imagePick" id="img" name="img" type="image" value="icons/svg/stoned.svg" create="{displayMode: "tiles"}"></file-picker>
   </div>
   <div class="form-group">
     <label for="bgColor">Background Color:</label>
@@ -41,5 +41,6 @@
       </select>
     </div>
   {{/each}}
-  <input type="text" id="img" name="img" placeholder="Image URL" value="icons/svg/item-bag.svg" style="display: none;" disabled>
-</form>
+  <button type="submit">{{#if targetArray.length}}Create and Apply{{else}}Create{{/if}}</button>
+  {{!-- <input type="text" id="img" name="img" placeholder="Image URL" value="icons/svg/item-bag.svg" style="display: none;" disabled> --}}
+</div>
