--- a/src/scss/utils/_typography.scss
+++ b/src/scss/utils/_typography.scss
@@ -5,8 +5,8 @@ $font-primary: 'Roboto',
 sans-serif;
 $font-secondary: 'Roboto',
 sans-serif;
-$font-decorative: 'Protest Revolution',
-sans-serif;
+// $font-decorative: 'Protest Revolution',
+// sans-serif;
 
 .protest-revolution-regular {
   font-family: "Protest Revolution", serif;
