--- a/src/scss/eventide-rp-system.scss
+++ b/src/scss/eventide-rp-system.scss
@@ -14,6 +14,7 @@
 
 /* Styles limited to eventide-rp-system sheets */
 @use 'components/chat-cards';
+@use 'components/status-creator';
 
 .eventide-rp-system {
   @include meta.load-css('components/forms');
