--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -16,10 +16,10 @@
   padding: 0px;
 }
 
-.window-content form,
-.window-content .dialog-buttons {
-  @extend .eventide-character-sheet;
-}
+// .window-content form,
+// .window-content .dialog-buttons {
+//   @extend .eventide-character-sheet;
+// }
 
 .rollable {
 
