--- a/src/scss/utils/_colors.scss
+++ b/src/scss/utils/_colors.scss
@@ -10,7 +10,7 @@ $app-bg: linear-gradient(to bottom, #004d9f8a, #0029708a);
 
 $character-glow: #007bffb3;
 $character-input: rgba($c-black, 0.45);
-$character-input-border: rgba($c-black, 0.5);
+$character-input-border: rgba($c-white, 0.5);
 $character-background-color: linear-gradient(to bottom, #44628389, #33486876);
 $secondary-image-background: rgba($c-black, 0.8);
 
