--- a/css/eventide-rp-system.css
+++ b/css/eventide-rp-system.css
@@ -33,8 +33,7 @@
   color: #fff;
 }
 
-.eventide-character-sheet, .window-content form,
-.window-content .dialog-buttons {
+.eventide-character-sheet {
   background-image: linear-gradient(to bottom, rgba(68, 98, 131, 0.537254902), rgba(51, 72, 104, 0.462745098));
   padding: 5px;
   margin: -8px;
@@ -43,16 +42,14 @@
   overflow: auto;
 }
 
-.eventide-character-sheet input, .window-content form input,
-.window-content .dialog-buttons input {
+.eventide-character-sheet input {
   background-color: rgba(0, 0, 0, 0.45);
   color: #fff;
   border-radius: 5px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+  border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
-.eventide-character-sheet input::selection, .window-content form input::selection,
-.window-content .dialog-buttons input::selection {
+.eventide-character-sheet input::selection {
   background: rgba(139, 69, 19, 0.7019607843);
   color: #fff;
 }
@@ -389,6 +386,7 @@
   padding: 0.01rem;
   padding-top: 0.2rem;
   padding-bottom: 0.2rem;
+  margin-bottom: 3px;
   background-color: rgba(139, 69, 19, 0.7019607843);
   color: #fff;
 }
@@ -417,6 +415,25 @@
 }
 .chat-card__effects--row {
   padding-left: 20px;
+  display: grid;
+  grid-column: span 3/span 3;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  width: 50%;
+}
+.chat-card__effects--row div {
+  padding-left: 3px;
+  padding-right: 3px;
+  border-bottom: 1px dashed #444;
+}
+.chat-card__effects--row div:first-child,
+.chat-card__effects--row div:last-child {
+  font-weight: bold;
+}
+.chat-card__effects--row div:last-child {
+  border-left: 1px dashed #444;
+}
+.chat-card__effects--row div:not(:first-child):not(:last-child) {
+  font-style: italic;
 }
 .chat-card__image--primary {
   width: 20px;
@@ -432,6 +449,32 @@
 .chat-card__hr {
   border: none;
   border-top: 1px solid #c9c7b8;
+}
+
+.status-creator {
+  overflow-y: auto;
+  max-height: 500px;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.status-creator::-webkit-scrollbar {
+  display: none;
+}
+.status-creator input {
+  background-color: rgba(0, 0, 0, 0.45);
+  color: #fff;
+  border-radius: 5px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+}
+.status-creator input::selection {
+  background: rgba(0, 0, 0, 0.45);
+  color: #fff;
+}
+.status-creator textarea {
+  background-color: rgba(0, 0, 0, 0.45);
+  border-radius: 5px;
+  padding: 5px;
+  margin: 5px;
 }
 
 .eventide-rp-system {
