--- a/src/scss/eventide-rp-system.scss
+++ b/src/scss/eventide-rp-system.scss
@@ -11,10 +11,12 @@
 @use 'global/grid';
 @use 'global/flex';
 @use 'global/character-sheet';
+@use 'global/form-elements';
 
 /* Styles limited to eventide-rp-system sheets */
 @use 'components/chat-cards';
 @use 'components/status-creator';
+@use 'components/damage-targets';
 
 .eventide-rp-system {
   @include meta.load-css('components/forms');
